# Raylib-Basic-Project

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SETUP.py  setup.py
examples/: cube-rotation.cpp
src/: main.cpp
